@@ -64,5 +64,6 @@ USE_L10N = True
 USE_TZ = True
 STATIC_URL = '/static/'
 DEBUG = False
+PRINTOUTS_ENABLED = True
 MAX_PARTICIPANT_FILES = 1000
 MAX_PRINT_PAGES = 12
