@@ -22,6 +22,9 @@ TEAPOT = False
 STATIC_ROOT = '/var/lib/oi-bus/static'
 MEDIA_ROOT = '/var/lib/oi-bus/files'
 
+# to disable printing, uncomment and change to False
+# PRINTOUTS_ENABLED = True
+
 # to enable old-school self-registration, change to True
 EVERYONE_IS_ADMIN = False
 
