@@ -1,6 +1,7 @@
 oi-bus (0.1.18) UNRELEASED; urgency=medium
 
   * Memes are no longer mandatory.
+  * Printouts support is no longer mandatory.
 
  -- Michał Sidor <michcioperz@asirpa.iscute.ovh>  Mon, 17 Feb 2020 20:16:24 +0100
 
